--- a/MyStoreProject/test-output/index.html
+++ b/MyStoreProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\pec\eclipse-workspace\MyStoreProject\testng_smoke.xml</span>
+                    <span>C:\Users\pec\git\MystoreProject\MyStoreProject\testng_smoke.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -164,7 +164,7 @@
                   <a name="verifyTitle">
                   </a> <!-- verifyTitle -->
                   <span class="method-name">verifyTitle</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [My Store1] but found [My Store]
+                  <div class="stack-trace">java.lang.AssertionError: expected [My Store1] but found [508 Resource Limit Is Reached]
 	at com.mystore.testcases.IndexPageTest.verifyTitle(IndexPageTest.java:40)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 33 stack frames
@@ -247,7 +247,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pec\eclipse-workspace\MyStoreProject\testng_smoke.xml</span>
+            <span class="header-content">C:\Users\pec\git\MystoreProject\MyStoreProject\testng_smoke.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -352,32 +352,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.mystore.testcases.LoginPageTest')
-data.setCell(0, 3, 11600);
+data.setCell(0, 3, 11508);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'orderHistoryandDetailsTest')
+data.setCell(1, 1, 'wishListTest')
 data.setCell(1, 2, 'com.mystore.testcases.HomePageTest')
-data.setCell(1, 3, 10927);
+data.setCell(1, 3, 11341);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'wishListTest')
+data.setCell(2, 1, 'orderHistoryandDetailsTest')
 data.setCell(2, 2, 'com.mystore.testcases.HomePageTest')
-data.setCell(2, 3, 10019);
+data.setCell(2, 3, 11195);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'productAvailabilityTest')
 data.setCell(3, 2, 'com.mystore.testcases.SearchResultPageTest')
-data.setCell(3, 3, 5330);
+data.setCell(3, 3, 8381);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'verifyLogo')
 data.setCell(4, 2, 'com.mystore.testcases.IndexPageTest')
-data.setCell(4, 3, 104);
+data.setCell(4, 3, 93);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'verifyTitle')
 data.setCell(5, 2, 'com.mystore.testcases.IndexPageTest')
-data.setCell(5, 3, 12);
+data.setCell(5, 3, 19);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 42 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -483,93 +483,93 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">2129 ms</span>
+                <span class="method-start">1332 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">orderHistoryandDetailsTest(admin@xyz.com, admin@123)</span>
-                <span class="method-start">18210 ms</span>
+                <span class="method-start">11049 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">29165 ms</span>
+                <span class="method-start">22258 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">29613 ms</span>
+                <span class="method-start">22652 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">wishListTest(admin@xyz.com, admin@123)</span>
-                <span class="method-start">39445 ms</span>
+                <span class="method-start">31614 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">49466 ms</span>
+                <span class="method-start">42957 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.testcases.SearchResultPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">49945 ms</span>
+                <span class="method-start">43333 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">productAvailabilityTest(t-shirt)</span>
-                <span class="method-start">61353 ms</span>
+                <span class="method-start">57807 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">66685 ms</span>
+                <span class="method-start">66191 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.testcases.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">67040 ms</span>
+                <span class="method-start">66531 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginTest(admin@xyz.com, admin@123)</span>
-                <span class="method-start">78291 ms</span>
+                <span class="method-start">76830 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">89895 ms</span>
+                <span class="method-start">88341 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.testcases.IndexPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">90260 ms</span>
+                <span class="method-start">88538 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLogo</span>
-                <span class="method-start">103139 ms</span>
+                <span class="method-start">98900 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">103245 ms</span>
+                <span class="method-start">98994 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">103490 ms</span>
+                <span class="method-start">100208 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">verifyTitle</span>
-                <span class="method-start">116116 ms</span>
+                <span class="method-start">105460 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">116579 ms</span>
+                <span class="method-start">105633 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.testcases.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">116827 ms</span>
+                <span class="method-start">106022 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
