--- a/MyStoreProject/test-output/old/CrossBrowser/methods.html
+++ b/MyStoreProject/test-output/old/CrossBrowser/methods.html
@@ -1,48 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>CrossBrowser</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5fe93">  <td>20/07/17 19:11:37</td>   <td>0</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>20/07/17 19:11:37</td>   <td>187</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>20/07/17 19:11:37</td>   <td>191</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>20/07/17 19:11:37</td>   <td>195</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:37</td>   <td>239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:37</td>   <td>239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:37</td>   <td>239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:48</td>   <td>10538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">verifyLogo</td> 
-  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:53</td>   <td>15395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">verifyLogo</td> 
-  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:53</td>   <td>15681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:54</td>   <td>16390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:55</td>   <td>17432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:55</td>   <td>17982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:56</td>   <td>19137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">verifyLogo</td> 
-  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:56</td>   <td>19305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:11:58</td>   <td>20843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:04</td>   <td>26509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">verifyTitle</td> 
-  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:04</td>   <td>26883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@3d921e20]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1246841284</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:07</td>   <td>29724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">verifyTitle</td> 
-  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:07</td>   <td>29760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@2781e022]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1319658452</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:14</td>   <td>37322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">verifyTitle</td> 
-  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
-<tr bgcolor="819b92">  <td>20/07/17 19:12:15</td>   <td>37383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@51e2adc7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1631315962</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:37</td>   <td>-771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">verifyTitle</td> 
+  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:26</td>   <td>-12273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:26</td>   <td>-12273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:25</td>   <td>-12964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@3427b02d]">verifyLogo</td> 
+  <td>TestNG-tests-1@113774985</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:37</td>   <td>-1276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:50</td>   <td>11543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:37</td>   <td>-1276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:49</td>   <td>11152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">verifyTitle</td> 
+  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:50</td>   <td>11543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:28</td>   <td>-9929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@74e52303]">verifyLogo</td> 
+  <td>TestNG-tests-2@294834178</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">verifyLogo</td> 
+  <td>TestNG-tests-3@69589338</td>   <td></td> </tr>
+<tr bgcolor="7e7b6c">  <td>22/04/30 22:05:55</td>   <td>16560</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="7e7b6c">  <td>22/04/30 22:05:10</td>   <td>-27944</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@283318938</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@69589338</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyTitle()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">verifyTitle</td> 
+  <td>TestNG-tests-3@69589338</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@69589338</td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a7bc6e">  <td>22/04/30 22:05:16</td>   <td>-22315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IndexPageTest.tearDown()[pri:0, instance:com.mystore.testcases.IndexPageTest@5af3afd9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
